# sandoc

./: .gitignore  .mcp.json  CLAUDE.md  QUICKSTART.md  README.md  pyproject.toml
.claude/agents/: analyst.md  docengine.md  visualist.md  writer.md
config/: settings.json
demo/: run_demo.sh  sample_company.json
docs/: .bkit-memory.json  .pdca-status.json  DEV-SPEC.md  PLAN.md
knowledge/: lessons.md  processing_history.json
knowledge/domain/: budget-rules.md  common-mistakes.md  document-types.md  government-writing-style.md  scoring-system.md
knowledge/expressions/: 2026-silversync-청년창업사관학교_20260213_103456.json  2026-subluna-demo_20260213_100844.json  recommended-expressions.md
knowledge/patterns/: 2026-silversync-청년창업사관학교_20260213_103456.json  2026-subluna-demo_20260213_100844.json  section-patterns.md
knowledge/presets/: analyst.md  builder.md  classic.md  disruptor.md  engineer.md  global.md  impact.md  proven.md  scaler.md  visionary.md
knowledge/tech/: hwp-structure.md
profiles/: _template.md
projects/sample-창업도약/: context.json
scripts/: check-deps.sh  new-project.sh  scan-docs.sh
src/sandoc/: __init__.py  analyzer.py  assemble.py  cli.py  extract.py  generator.py  hwpx_engine.py  inject.py  interview.py  learn.py  output.py  parser.py  profile_register.py  review.py  run.py  schema.py  style.py  visualize.py
tests/: README.md  test_e2e.py  test_extract_assemble.py  test_interview_learn_inject_run.py  test_output.py  test_parser.py  test_visualize_review_profile.py
tests/v1-data/: [별첨 1] 2025년도 창업도약패키지(일반형) 창업기업 사업계획서 양식.docx  (+3 more)
(+23 files in other folders)
